fix: adjust button alignment container to allow wrapping

--- a/src/entrypoints/static/style.css
+++ b/src/entrypoints/static/style.css
@@ -190,5 +190,5 @@ body {
     display: flex;
     gap: 5px;
     align-items: center;
-    white-space: nowrap;
+    flex-wrap: wrap;
 }
